--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -89,7 +89,7 @@
       </div>
       <div class="acoes">
         <button (click)="criarPensamento()" class="botao">Salvar</button>
-        <button (click)="cancelarPensamento()" class="botao">Cancelar</button>
+        <button routerLink="/" (click)="cancelarPensamento()" class="botao">Cancelar</button>
       </div>
   </form>
 </section>
