--- a/src/app/componentes/pensamentos/editar-pensamento/editar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/editar-pensamento/editar-pensamento.component.html
@@ -1,6 +1,6 @@
-<section class="container criar-pensamentos ff-inter">
+<section class="container editar-pensamentos ff-inter">
   <header class="header">
-    <h2>Adicione um <br>pensamento novo:</h2>
+    <h2>Editar o <br>pensamento:</h2>
   </header>
   <form>
     <label for="pensamento">Pensamento</label>
@@ -89,7 +89,7 @@
       </div>
       <div class="acoes">
         <button (click)="cancelar()" class="botao">Cancelar</button>
-        <button (click)="criarPensamento()" class="botao">Salvar</button>
+        <button (click)="editarPensamento()" class="botao">Salvar</button>
       </div>
   </form>
 </section>
